# Sierpinski_Carpet_CS150

./: CMakeLists.txt  README.md  assignment3.cpp
